[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/dialogue_balloon.gd" id="1_script"]

; ============================================================
; Dialogue Balloon â€” shows NPC dialogue at bottom of screen
; ============================================================
[node name="DialogueBalloon" type="CanvasLayer"]
layer = 20
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -200.0
offset_right = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SpeakerLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1.0, 0.84, 0.0, 1.0)
theme_override_font_sizes/font_size = 20
text = "Speaker"

[node name="DialogueText" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
bbcode_enabled = true
text = "Dialogue text goes here..."
fit_content = true

[node name="ResponsesContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
